# news-summarizer-ollama

./: .gitignore  README.md  pyproject.toml
apps/streamlit-ui/: app.py  pyproject.toml
configs/: data.yaml  ollama.yaml  train.yaml
scripts/: check_env.sh  run_training_pipeline.sh
