[project]
name = "streamlit-ui"
version = "0.1.0"
description = "Streamlit frontend for Ollama summarization model"
requires-python = ">=3.11,<3.13"
dependencies = [
  "requests>=2.32.3",
  "streamlit>=1.38.0",
  "trafilatura>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/streamlit_ui"]
